deploy/lightworker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lightworker
  labels:
    app: lightworker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lightworker
  template:
    metadata:
      labels:
        app: lightworker
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      volumes:
        - name: lightworker-storage
          persistentVolumeClaim:
            claimName: lightworker-claim
      containers:
      - name: lightworker
        image: registry:5000/lightworker:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
        livenessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 30
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 30
          timeoutSeconds: 30
        resources:
          requests:
            memory: "128Mi"
            cpu: "16m"
          limits:
            memory: "256Mi"
            cpu: "512m"
        volumeMounts:
          - mountPath: "/data"
            name: lightworker-storage
---
