deploy/lightworker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: buildversionsapi
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "lightworker.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: lightworker
            port:
              number: 80
  - host: "lightworker"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: lightworker
            port:
              number: 80
